test_report.txt

> restaurant-menu@0.1.0 test
> react-scripts test --coverage

PASS src/components/RatingFeature.test.tsx
PASS src/components/DeliveryDropDown.test.tsx
FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/restaurant-menu/restaurant-menu/node_modules/react-dnd/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export * from './core/index.js';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      10 | } from "@chakra-ui/react";
      11 | import RatingFeature from "./RatingFeature";
    > 12 | import { useDrag } from "react-dnd";
         | ^
      13 |
      14 | export default function FoodItem({
      15 |     name,

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/FoodItem.tsx:12:1)
      at Object.<anonymous> (src/components/ItemListUI.tsx:5:1)
      at Object.<anonymous> (src/components/SearchBar.tsx:5:1)
      at Object.<anonymous> (src/pages/Landing.tsx:5:1)
      at Object.<anonymous> (src/App.tsx:3:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

-----------------------|---------|----------|---------|---------|-------------------
File                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------------|---------|----------|---------|---------|-------------------
All files              |    5.29 |      1.2 |    6.34 |    5.47 |                   
 src                   |       0 |      100 |       0 |       0 |                   
  App.tsx              |       0 |      100 |       0 |       0 | 13                
 src/components        |    9.09 |     1.56 |   10.25 |    9.63 |                   
  CheckoutList.tsx     |       0 |        0 |       0 |       0 | 17-63             
  DeliveryDropDown.tsx |      80 |      100 |   66.66 |      80 | 24                
  FoodItem.tsx         |       0 |        0 |       0 |       0 | 25-33             
  FoodListAddUI.tsx    |       0 |        0 |       0 |       0 | 8-27              
  ItemListUI.tsx       |       0 |      100 |       0 |       0 | 11-22             
  NavBar.tsx           |       0 |      100 |       0 |       0 | 6                 
  RatingFeature.tsx    |      80 |       50 |   66.66 |      80 | 21                
  SearchBar.tsx        |       0 |        0 |       0 |       0 | 8-103             
  SelectRole.tsx       |       0 |        0 |       0 |       0 | 7-47              
 src/interfaces        |       0 |        0 |       0 |       0 |                   
  CustomerList.ts      |       0 |        0 |       0 |       0 |                   
  EmployeeList.ts      |       0 |        0 |       0 |       0 |                   
  Food.ts              |       0 |        0 |       0 |       0 |                   
  ListOfCustomers.ts   |       0 |        0 |       0 |       0 |                   
  OwnerFoodItem.ts     |       0 |        0 |       0 |       0 |                   
  OwnerList.ts         |       0 |        0 |       0 |       0 |                   
  User.ts              |       0 |        0 |       0 |       0 |                   
 src/pages             |       0 |        0 |       0 |       0 |                   
  AboutUs.tsx          |       0 |      100 |       0 |       0 | 13                
  AddFood.tsx          |       0 |        0 |       0 |       0 | 21-241            
  EditFood.tsx         |       0 |        0 |       0 |       0 | 9-15              
  EditUsers.tsx        |       0 |      100 |       0 |       0 | 24-239            
  Landing.tsx          |       0 |      100 |       0 |       0 | 11                
  RemoveFood.tsx       |       0 |        0 |       0 |       0 | 21-145            
-----------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 2 passed, 3 total
Tests:       12 passed, 12 total
Snapshots:   0 total
Time:        4.883 s
Ran all test suites.
